--- a/src/app/users/all-required-courses/all-required-courses.component.html
+++ b/src/app/users/all-required-courses/all-required-courses.component.html
@@ -8,7 +8,7 @@
             }" >
               <div class="card panel panel-default">
                   <div class="panel-body">
-                      <a [routerLink]="['user/courses/', course._id]"></a>
+                      <a [routerLink]="['/user/courses/', course._id]"> Course Details</a>
                   </div>
                   <div class="panel-footer card-block">
                       <h5><a href="#" class="a" title="Image">{{course.name}}</a></h5>
