--- a/src/app/shared/chat/chat.component.html
+++ b/src/app/shared/chat/chat.component.html
@@ -1,9 +1,75 @@
-<div class="container">
+<main>
   <div class="row">
     <div class="col-md-5">
-        <div class="panel panel-primary" *ngIf="joined; else joinRoom">
+      <div class="panel panel-primary">
+
+        <div class="panel-footer" *ngIf="joined">
+          <form (ngSubmit)="sendMessage()" #msgForm="ngForm">
+            <div class="input-group">
+              <input type="hidden" [(ngModel)]="messageData.room" name="room" />
+              <input type="hidden" [(ngModel)]="messageData.username" name="username" />
+              <input id="btn-input" type="text" [(ngModel)]="messageData.message"
+              name="message" class="form-control input-sm" placeholder="Type your message here..."
+                required="" />
+              <span class="input-group-btn">
+                <button class="btn btn-warning btn-sm" id="btn-chat" [disabled]="!msgForm.form.valid">
+                  Send</button>
+              </span>
+            </div>
+          </form>
+        </div>
+
+        <div class="panel-body" *ngIf="chats">
+          <ul class="chat">
+            <li *ngFor="let chat of chats | paginate: {
+              itemsPerPage: pageSize,
+              currentPage: currentPageNumber
+            }">
+              <div class="left clearfix">
+                <span class="chat-img pull-left">
+                  <img src="{{user.profilePictureUrl}}" alt="User Avatar" class="img-circle" />
+                </span>
+                <div class="chat-body clearfix">
+                  <div class="header">
+                    <strong class="primary-font">User: {{ chat.username }}</strong>
+                    <small class="pull-right text-muted">
+                      <span class="glyphicon glyphicon-time"></span>{{ chat.updated_at | date: 'medium' }}</small>
+                  </div>
+                  <p>{{ chat.message }}</p>
+                </div>
+
+              </div>
+            </li>
+          </ul>
+
+          <pagination-controls (pageChange)="currentPageNumber = $event">
+          </pagination-controls>
+        </div>
+      </div>
+
+      <div class="panel panel-primary" *ngIf="!joined">
+        <div class="panel-body">
+          <h1>Select Chat Room</h1>
+
+          <form (ngSubmit)="joinRoom()" #joinForm="ngForm">
+            <div class="form-group">
+              <input type="text" class="form-control" [(ngModel)]="user.username" name="username" placeholder="Username" required="" />
+            </div>
+            <div class="form-group">
+              <select class="form-control" [(ngModel)]="user.room" name="room" required="">
+                <option value="Javascript">Javascript</option>
+                <option value="Java">Java</option>
+                <option value="Python">Python</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-success" [disabled]="!joinForm.form.valid">Join</button>
+            </div>
+          </form>
 
         </div>
+      </div>
+
     </div>
   </div>
-</div>
+</main>
